# dietnb

./: .gitignore  CHANGELOG.md  README.md  README_ko.md  log  pyproject.toml  rule.md
.cursor/rules/: rule.md  rule.mdc
dietnb/: _core.py  _templates.py
dietnb/dietnb/: __init__.py  _cli.py  _core.py  _ipython.py  _startup.py
src/dietnb/: README_ko.md  pyproject.toml
src/dietnb/dietnb/: _core.py
tests/: test_dietnb_copy_integration.ipynb
